--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ nav {
   margin-top: 15px;
   height: 30px;
   text-decoration: none;
-  
 }
 
 .nav1 {
@@ -20,21 +19,18 @@ nav {
   padding-left: 10px;
 }
 
-
 .space-left {
   padding-left: 15px;
 }
 
 .nav2 {
   display: flex;
-  align-items: center   ;
+  align-items: center;
   justify-content: space-between;
   width: 220px;
   font-size: 13px;
   padding: 0 30px;
-
 }
-
 
 .apps {
   width: 30px;
@@ -44,32 +40,36 @@ nav {
   opacity: 0.5;
 }
 
-.apps:hover{
-    opacity: 1;
+.apps:hover {
+  opacity: 1;
 }
 
 .in-btn {
-    width: 69.34px;
-    height: 30px;
-    box-sizing: border-box;
-    padding: 0 12px;
-    color: white;
-    border: 1px solid #4285f4;
-    font-size: 13px;
-    font-weight: bold;
-    background-color: #4387fd;
+  width: 69.34px;
+  height: 30px;
+  box-sizing: border-box;
+  padding: 0 12px;
+  color: white;
+  border: 1px solid #4285f4;
+  font-size: 13px;
+  font-weight: bold;
+  background-color: #4387fd;
+  border-radius: 2px;
 }
+
 
 .ctn1 {
   height: 233px;
   align-items: center;
   padding: 109px 0 0;
   box-sizing: border-box;
+  margin: 45px 0 0;
 }
+
 
 .ctn2 {
   height: 52px;
-  margin: 6px 0 0;
+  margin: -10px 0 0 ;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,9 +81,13 @@ nav {
   width: 582px;
   height: 44px;
   border-radius: 25px;
-  padding: 5px 8px 0 14px;
+  padding: 5px 8px 5px 14px;
   border: 1px solid #e1e3e7;
   box-sizing: border-box;
+}
+
+.ctn2-1:hover {
+  box-shadow: 0 0 3px 3px #f2f2f2;
 }
 
 .mag-con {
@@ -94,6 +98,7 @@ nav {
   margin: -5px 0 0;
   padding: 9px 13px 9px 0;
   width: 33px;
+  opacity: 0.5;
 }
 
 .micro-con {
@@ -104,82 +109,82 @@ nav {
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  justify-content: center;    color: #222;
-
+  justify-content: center;
+  color: #222;
 }
 
 .ctn3 {
-    width: 571px;
-    height: 88px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content:  center;
+  width: 571px;
+  height: 88px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .gs-btn {
-    width: 125px;
-    height: 36px;
-    margin: 11px 4px ;
-    border: none;
-    color: #5F6368;
-    padding: 0 16px;
-    border-radius: 4px;
+  width: 125px;
+  height: 36px;
+  margin: 11px 4px;
+  border: none;
+  color: #5f6368;
+  padding: 0 16px;
+  border-radius: 4px;
 }
-
 
 .ifl-btn {
-    width: 142.5px;
-    height: 36px;
-    margin: 11px 4px ;
-    border: none;
-    color: #5F6368;
-    padding: 0 16px;
-    border-radius: 4px;
-
+  width: 142.5px;
+  height: 36px;
+  margin: 11px 4px;
+  border: none;
+  color: #5f6368;
+  padding: 0 16px;
+  border-radius: 4px;
 }
 
+.gs-btn:hover,
+.ifl-btn:hover {
+  border: 1px solid rgba(133, 133, 133, 0.6);
+  cursor: pointer;
+}
 
 .footer {
-   width: 100%;
-    height: 40px;
-    padding: 0;
-    position: fixed;
-    bottom: 0;
-    background-color: #f2f2f2;
-    color: #222;
-    line-height: 40px;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  background-color: #f2f2f2;
+  color: #222;
+  line-height: 40px;
+  display: flex;
+  justify-content: space-between;
+  border-top:#e4e4e4 1px solid;
 }
 
-
-.ul1{
-    padding: 0;
+.ul1 {
+  padding: 0;
 }
 
-.ul2{
-    padding: 0 27px 0;
+.ul2 {
+  padding: 0 27px 0;
 }
 
 li {
-    display: inline;
-    padding:0 0 0 27px;
-    font-size: 14px;
-    margin: 0;
-
+  display: inline;
+  padding: 0 0 0 27px;
+  font-size: 14px;
+  margin: 0;
 }
 ul {
-    margin: 0;
+  margin: 0;
 }
-
-
-
 
 #search-bar {
   width: 487px;
   height: 34px;
   border: none;
+  font-size: 16px;
 }
 
 input:focus,
@@ -189,13 +194,13 @@ select:focus {
 }
 
 #search-icon {
-  width: 14.58px;
+  width: 14px;
   height: auto;
 }
 
 #microphone {
-  height: 24px;
-  
+  height: 20px;
+
 }
 
 /* nav bar text selectors */
@@ -213,7 +218,6 @@ li a {
   color: #5f6368;
 }
 
-a:hover{
-    text-decoration: underline;
+a:hover {
+  text-decoration: underline;
 }
-
